new video and video-poster added, CEEIGEF temporary logo added

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">CEEIGEF</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -74,7 +74,10 @@
     <!-- Header -->
     <header>
       <div class="intro-text-wrapper">
-          <h1>CEEIGEF</h1>
+          <h1>
+            <span class="intro-text-first-character">C</span>
+            <span class="intro-text">EEIGEF</span>
+          </h1>
       </div>
         <div class="video-wrapper">
             <video autoplay loop muted poster="./img/video/intro-poster.png">
