--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Lorem ipsum dolor sit amet">
-  <meta name="keywords" content="Lorem ipsum dolor sit amet" />
+  <meta name="description" content="Centro de Educação Especial Integrada Geny Ferreira Filantropia">
+  <meta name="keywords" content="CEEIGEF Centro de Educação Especial Integrada Geny Ferreira Acessibilidade Sousa Paraíba" />
   <link rel="canonical" href="http://www.ceeigef.com.br/">
-  <title>CEEIGEF | Lorem ipsum dolor sit amet</title>
-  <meta property="og:title" content="CEEIGEF | Lorem ipsum dolor sit amet"/>
+  <title>CEEIGEF | Centro de Educação Especial Integrada Geny Ferreira</title>
+  <meta property="og:title" content="CEEIGEF | Centro de Educação Especial Integrada Geny Ferreira"/>
   <meta property="og:url" content="http://www.ceeigef.com.br/" />
   <meta property="og:type" content="website" />
   <meta property="og:image:type" content="image/png">
@@ -17,7 +17,7 @@
   <meta property="og:image" content="./img/thumbnail.png" />
   <meta property="og:locale" content="pt_BR" />
   <meta property="og:site_name" content="CEEIGEF" />
-  <meta property="og:description" content="Lorem ipsum dolor sit amet" />
+  <meta property="og:description" content="Centro de Educação Especial Integrada Geny Ferreira" />
   <!--Imports -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom Fonts -->
@@ -75,9 +75,13 @@
     <header>
       <div class="intro-text-wrapper">
           <h1>
-            <span class="intro-text-first-character">C</span>
-            <span class="intro-text">EEIGEF</span>
+            <span class="intro-text-logo-first-character white">C</span>
+            <span class="intro-text-logo">EEIGEF</span>
+            <br>
           </h1>
+          <p class="intro-text">
+            <span>C</span>entro de <span>E</span>ducação <span>E</span>special <span>I</span>ntegrada <span>G</span>eny <span>F</span>erreira
+          </p>
       </div>
         <div class="video-wrapper">
             <video autoplay loop muted poster="./img/video/intro-poster.png">
