ceeigef svg logo added, brand image changed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">CEEIGEF</a>
+                <a class="navbar-brand page-scroll" href="#page-top">
+                  <img src="img/logos/ceeigef.svg" alt="" />
+                </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -74,11 +76,7 @@
     <!-- Header -->
     <header>
       <div class="intro-text-wrapper">
-          <h1>
-            <span class="intro-text-logo-first-character white">C</span>
-            <span class="intro-text-logo">EEIGEF</span>
-            <br>
-          </h1>
+          <img src="img/logos/ceeigef.svg" alt="CEEIGEF" />
           <p class="intro-text">
             <span>C</span>entro de <span>E</span>ducação <span>E</span>special <span>I</span>ntegrada <span>G</span>eny <span>F</span>erreira
           </p>
