--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contato</h2>
-                    <h3 class="section-subheading text-muted">Get in <span class="fed132">touch</span> is easy!</h3>
+                    <h3 class="section-subheading text-muted">Entrar em <span class="fed132">contato</span> conosco é fácil!</h3>
                 </div>
             </div>
             <div class="row">
@@ -527,28 +527,28 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
+                                    <input type="text" class="form-control" placeholder="Seu Nome *" id="name" required data-validation-required-message="Por favor, insira seu nome!">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                                    <input type="email" class="form-control" placeholder="Seu Melhor Email *" id="email" required data-validation-required-message="Por favor, insira seu e-mail!">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                    <input type="tel" class="form-control" placeholder="Seu Melhor Telefone *" id="phone" required data-validation-required-message="Por favor, insira o seu telefone!">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                    <textarea class="form-control" placeholder="Sua Mensagem *" id="message" required data-validation-required-message="Por favor, insira a sua mensagem!"></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <button type="submit" class="btn btn-xl btn-custom">Send Message</button>
+                                <button type="submit" class="btn btn-xl btn-custom">Enviar Mensagem</button>
                             </div>
                         </div>
                     </form>
